# Kitsune

./: .gitignore  AGENTS.md  CLA.md  Cargo.toml  Justfile  LICENSE  NOTICE  PROMPT.md  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
.github/: dependabot.yml
.github/workflows/: ci.yml
.sqlx/: query-0053226b5358d92acb14aa5d445b057e225c33d342336936cf790d7aeb59dc6f.json  query-00ad4fb1756295b05c66852146d454b37812577ee712f441e615c0be73195239.json  query-01287e50496e2e9e01a4dd5f924b59715989ef69b657c087396c00ab9dc17c80.json  query-015fe07b1807e5eed116cf81eec03dd7445773b0c8aa86ea5a8c2a67e0ac4d94.json  query-027a206244cea629082168877fb0c0663a023e6e823a6acf1d260b1d8242be76.json  query-02878da8ef9b5ddf33f3ba6adcff686ce796e722e698627ad37c9e298a65b089.json  query-02959243ede310d518f706216d4b13f6d091b0e6f9325ece08c66adf4a633c7e.json  query-02dcfcfc02f83743c9245f7fa3a1ec7788789d3c0e487ecc204429cab78f0c2e.json  query-0332f30849f7ee1f333b0187b85a808f21fa84684a4a7f8180422ab389faa0d4.json  query-04b2d87e6522fc5711ed47566bf83a5363211f57ce671d0732a2ab9c3f032231.json  query-05247a2b66304ee65d2a298e47b30f491a6e6dbbc0515b6435f3be332335f52e.json  query-054649a545352caf53baf0a977e52192fb262a36efbc7ad898e8ccc84360b4d8.json  query-054edb41c2c548062cf71169ff71c85dff165c06f4e4d58b9ecb0c9dc9c81492.json  query-0606cb50078999baeb724d1993831601081d1746bc5f5528c676e61962f12d24.json  query-0773fe4b017887529cdf7062f8c2659fbcaa69112708fa850572daa011a25ee0.json  query-08dac427b88bcde52fefd2ddebbcf9356a3d3a5b040adfc9805523d84ac36609.json  query-09547552b72ece5d4ab8acb4dea9bfb115d97824f3d4e91c2ab533a0a13ebd6e.json  query-0972d828dd21e1b87ec24af224106ef37a7a81ba9ded4790953945c40b979e70.json  query-09d49273802cf96e14035c8cf7516587fada8846a1f2108148887bc576307e5a.json  query-0ab8b6ce85e8a09bff181c8287d78077f0d49f029b3bcde5acb8c0c8892101bc.json  query-0b3691a2a845fe4b3106c71441f13500607ffb5f737a09673cf603c056d091cf.json  query-0be552029922f78f681d0db2bb7c0ccb5fdd161fa2ee70f0e4c3eae1169aa277.json  query-0c8114be9889c2f01102b53d273aff9dd78ae93f67a142667fda3e7337f3b30b.json  query-0cca40d18dea49d1aeccc94bc8144dc5f106fe22292a71234790a8561c4722ac.json  query-0d988ee0601b1c34a119609f42454c8021f05a01c46bab3c81325340e7f2dfab.json  query-0dc774bd286b2904372c15075de1f24bfa9f11aef9e961d72819010c3cc60349.json  query-0e0bd94abae71db401b8f2c505d9ac28a400b37fa91ccdeee436e3cc6402d4ca.json  query-0f24685e91b176fb0b94df180d1d283024f89499378eb1aedb9eb3ffd5a092b7.json  query-0f3612e9dd1843d572026fe3fa3000e78236dcba7c8fe763ff9ad08fa072e705.json  query-0f47e140912b740d8650de9190cafcef229fe4c9da4a1c5154d9cb16d63e5014.json  query-0f771a0d993675c5ebbd227448f7762f2ac48ca85de64802c2452b68a61c83e0.json  query-0ffa4cb0ad9972e5d3bcf74f7628cc239308709f1eb18fe150b56a28bb3b6dd9.json  query-104a73a5037785c93b0017cb3bd695a9fc70d610f8bf2a2afe3d39e8e1dda14b.json  query-10fc6819cc420b89667cae9c39117ee9b4df19faef76dd540b93429fbb7d1266.json  query-1133d3889355f3a8f5524b3444aa7b4e0605d4bddfdfc0af4901e2c00b606513.json  query-1240a9cb1377852052940611101f62ca7bcf57834a356b36695725e02d6e26d1.json  query-13009408016b6582440cd640765a3f45c55db4b4289bb8278138116f70a00b4b.json  query-131bad8c0468da4114c28f6a1d89a36236289e1b3e0cf5405279387b30ffc9fd.json  query-135e14a5fe874cceac973e9fd6f7763e3a73fa625aceb1b141ce5b8dc3a3ad9a.json  query-136a1b2c0a8a828fddb8c3014489f27cb15953d0d43eebff5a88864df523de86.json  (+320 more)
crates/kitsune-api/: Cargo.toml
crates/kitsune-api/src/: audit.rs  auth.rs  engagement.rs  error.rs  identity_admin.rs  lib.rs  notifications.rs  oauth.rs  oidc.rs  oidc_routes.rs  passkeys.rs  profiles.rs  realtime.rs  resources.rs  saml.rs  saml_routes.rs  scoreboard_cache.rs  submissions.rs  teams.rs  tokens.rs
crates/kitsune-api/tests/: oauth_client_credentials.rs  oidc_authorization_code.rs  saml_sp_initiated.rs
crates/kitsune-automation/: Cargo.toml
crates/kitsune-automation/src/: automation.rs  egress.rs  lib.rs  local.rs  nats_event_bus.rs  redis_cache.rs  scoreboard_cache.rs  webhook.rs
crates/kitsune-cli/: Cargo.toml
crates/kitsune-cli/src/: main.rs
crates/kitsune-core/: Cargo.toml
crates/kitsune-core/src/: authz.rs  challenge.rs  config.rs  events.rs  identity.rs  instances.rs  lib.rs  modes.rs  ports.rs  scoring.rs
crates/kitsune-db/: Cargo.toml
crates/kitsune-db/migrations/: 0001_initial.sql  0002_challenge_surveys.sql  0003_team_membership_scope.sql  0004_team_permissions.sql  0005_submission_receipts.sql  0006_engagement_workflows.sql  0007_manual_submission_reviews.sql  0008_oauth_client_ownership.sql  0009_oauth_client_tenant_integrity.sql  0010_oidc_providers.sql  0011_passkeys.sql  0012_saml.sql  0013_dynamic_instance_flags.sql  0014_competitor_profile_indexes.sql  0015_immutable_audit_log.sql  0016_identity_administration.sql  0017_notification_delivery.sql
crates/kitsune-db/src/: audit.rs  auth.rs  engagement.rs  identity_admin.rs  instances.rs  lib.rs  notifications.rs  oauth.rs  oidc.rs  passkeys.rs  profiles.rs  resources.rs  saml.rs  submissions.rs  team_admin.rs  teams.rs  tokens.rs
crates/kitsune-integrations/: Cargo.toml
crates/kitsune-integrations/src/: lib.rs  smtp.rs
crates/kitsune-orchestrator/: Cargo.toml
crates/kitsune-orchestrator/src/: lib.rs
crates/kitsune-plugins/: Cargo.toml
crates/kitsune-plugins/src/: lib.rs
crates/kitsune-server/: Cargo.toml
crates/kitsune-server/src/: main.rs
docs/decisions/: DECISIONS.md
docs/design/: INTERFACE_CONTRACT.md
docs/plan/: ARCHITECTURE.md  HANDOFF.md  MILESTONES.md  PLAN.md  STATE.md  TODO.md
docs/reference/: ctfd-feature-parity.md
plugins/foxfire-verifier/: component.wat
tests/e2e/: event-authoring.spec.ts
web/: .prettierignore  .prettierrc  eslint.config.js  index.html  next.config.ts  openapi.json  package.json  playwright.config.ts  svelte.config.js  tsconfig.json  vite.config.ts  vitest.config.ts
web/.svelte-kit/: ambient.d.ts  non-ambient.d.ts  tsconfig.json
web/.svelte-kit/types/: route_meta_data.json
web/src/: app.css  app.d.ts  app.html  app.tsx  main.tsx
web/src/app/: event-context.tsx  (+7 more)
wit/: kitsune-plugin.wit
(+253 files in other folders)
