[workspace]
resolver = "2"
members = [
  "crates/kitsune-core",
  "crates/kitsune-api",
  "crates/kitsune-db",
  "crates/kitsune-orchestrator",
  "crates/kitsune-plugins",
  "crates/kitsune-automation",
  "crates/kitsune-integrations",
  "crates/kitsune-cli",
  "crates/kitsune-server",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.93"
license = "LicenseRef-KCL-1.0"
authors = ["[COPYRIGHT HOLDER]"]
repository = "https://example.invalid/kitsune"

[workspace.dependencies]
anyhow = "1.0.100"
argon2 = { version = "0.5.3", features = ["std"] }
async-trait = "0.1.89"
axum = { version = "0.8.8", features = ["macros", "ws", "multipart"] }
base64 = "0.22.1"
bytes = "1.11.0"
chrono = { version = "0.4.43", features = ["serde"] }
clap = { version = "4.5.54", features = ["derive", "env"] }
config = "0.15.19"
dashmap = "6.1.0"
futures = "0.3.31"
hmac = "0.12.1"
hex = "0.4.3"
http = "1.4.0"
jsonwebtoken = "10.2.0"
metrics = "0.24.3"
metrics-exporter-prometheus = "0.18.1"
rand = "0.9.2"
regex = "1.12.2"
reqwest = { version = "0.12.28", default-features = false, features = ["json", "rustls-tls"] }
secrecy = { version = "0.10.3", features = ["serde"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sha2 = "0.10.9"
sqlx = { version = "0.8.6", default-features = false, features = ["runtime-tokio-rustls", "postgres", "migrate", "macros", "chrono", "uuid", "json"] }
subtle = "2.6.1"
thiserror = "2.0.17"
tokio = { version = "1.49.0", features = ["full"] }
tokio-stream = { version = "0.1.18", features = ["sync"] }
tower = { version = "0.5.2", features = ["util"] }
tower-http = { version = "0.6.8", features = ["cors", "trace", "compression-gzip", "request-id", "timeout", "limit", "fs", "set-header"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter", "json"] }
url = { version = "2.5.7", features = ["serde"] }
utoipa = { version = "5.4.0", features = ["axum_extras", "chrono", "uuid"] }
utoipa-swagger-ui = { version = "9.0.2", features = ["axum"] }
uuid = { version = "1.19.0", features = ["v4", "v7", "serde"] }

[workspace.lints.rust]
unsafe_code = "forbid"
missing_docs = "allow"

[workspace.lints.clippy]
all = { level = "deny", priority = -1 }
pedantic = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
must_use_candidate = "allow"
doc_markdown = "allow"
large_enum_variant = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
needless_pass_by_value = "allow"
struct_excessive_bools = "allow"
too_many_lines = "allow"
