[workspace]
resolver = "2"
members = [
  "crates/kitsune-core",
  "crates/kitsune-api",
  "crates/kitsune-db",
  "crates/kitsune-orchestrator",
  "crates/kitsune-plugins",
  "crates/kitsune-automation",
  "crates/kitsune-integrations",
  "crates/kitsune-cli",
  "crates/kitsune-server",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.94"
license = "LicenseRef-KCL-1.0"
authors = ["[COPYRIGHT HOLDER]"]
repository = "https://example.invalid/kitsune"

[workspace.dependencies]
anyhow = "1.0.100"
argon2 = { version = "0.5.3", features = ["std"] }
async-nats = { version = "0.50.0", default-features = false, features = ["jetstream", "nkeys", "ring", "server_2_10", "server_2_11", "server_2_12", "server_2_14"] }
async-trait = "0.1.89"
axum = { version = "0.8.8", features = ["macros", "ws", "multipart"] }
axum-extra = { version = "0.12.6", features = ["cookie-private", "cookie-key-expansion"] }
base64 = "0.22.1"
bytes = "1.11.0"
chrono = { version = "0.4.43", features = ["serde"] }
chacha20poly1305 = "0.10.1"
clap = { version = "4.5.54", features = ["derive", "env"] }
config = "0.15.19"
dashmap = "6.1.0"
ed25519-dalek = "2.2.0"
futures = "0.3.31"
hmac = "0.13.0"
hex = "0.4.3"
http = "1.4.0"
jsonwebtoken = { version = "10.2.0", features = ["rust_crypto"] }
lettre = { version = "0.11.22", default-features = false, features = ["builder", "smtp-transport", "pool", "tokio1-rustls", "ring", "webpki-roots"] }
metrics = "0.24.3"
metrics-exporter-prometheus = "0.18.1"
openidconnect = { version = "4.0.1", default-features = false, features = ["reqwest", "rustls-tls"] }
pasetors = "0.7.8"
rand = "0.10.2"
rcgen = { version = "0.14.8", default-features = false, features = ["crypto", "pem", "ring"] }
regex = "1.12.2"
reqwest = { version = "0.12.28", default-features = false, features = ["json", "rustls-tls"] }
redis = { version = "1.4.1", default-features = false, features = ["connection-manager", "script", "tokio-rustls-comp", "tls-rustls-webpki-roots"] }
rsa = { version = "0.9.10", features = ["getrandom"] }
saml-rs = "=0.3.0"
secrecy = { version = "0.10.3", features = ["serde"] }
semver = { version = "1.0.27", features = ["serde"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sha2 = "0.11.0"
sqlx = { version = "0.8.6", default-features = false, features = ["runtime-tokio-rustls", "postgres", "migrate", "macros", "chrono", "uuid", "json"] }
subtle = "2.6.1"
thiserror = "2.0.17"
time = "0.3.54"
tokio = { version = "1.49.0", features = ["full"] }
tokio-stream = { version = "0.1.18", features = ["sync"] }
testcontainers = "0.27.3"
totp-rs = { version = "5.7.2", features = ["otpauth", "zeroize"] }
tower = { version = "0.5.2", features = ["util"] }
tower-http = { version = "0.6.8", features = ["cors", "trace", "compression-gzip", "request-id", "timeout", "limit", "fs", "set-header"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter", "json"] }
url = { version = "2.5.7", features = ["serde"] }
utoipa = { version = "5.4.0", features = ["axum_extras", "chrono", "uuid"] }
utoipa-swagger-ui = { version = "9.0.2", features = ["axum"] }
uuid = { version = "1.19.0", features = ["v4", "v7", "serde"] }
webauthn-rs = { version = "0.5.5", default-features = false, features = ["danger-allow-state-serialisation"] }
wasmtime = { version = "47.0.2", default-features = false, features = ["anyhow", "async", "component-model", "component-model-async", "cranelift", "runtime", "std", "wat"] }

[workspace.lints.rust]
unsafe_code = "forbid"
missing_docs = "allow"

[workspace.lints.clippy]
all = { level = "deny", priority = -1 }
pedantic = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
must_use_candidate = "allow"
doc_markdown = "allow"
large_enum_variant = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
needless_pass_by_value = "allow"
struct_excessive_bools = "allow"
too_many_lines = "allow"

# CI and local builds compile Wasmtime, SQLx, and every adapter together. Debug
# symbols and incremental caches multiply that graph until hosted runners run
# out of storage without improving test fidelity.
[profile.dev]
debug = 0
incremental = false

[profile.test]
debug = 0
incremental = false
