[package]
name = "kitsune-api"
description = "Kitsune HTTP, realtime, authentication, and OpenAPI surface"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
argon2.workspace = true
async-trait.workspace = true
axum.workspace = true
axum-extra.workspace = true
base64.workspace = true
chrono.workspace = true
chacha20poly1305.workspace = true
futures.workspace = true
hex.workspace = true
kitsune-automation = { path = "../kitsune-automation" }
kitsune-core = { path = "../kitsune-core" }
kitsune-db = { path = "../kitsune-db" }
openidconnect.workspace = true
pasetors.workspace = true
rand.workspace = true
reqwest.workspace = true
secrecy.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
subtle.workspace = true
time.workspace = true
tokio.workspace = true
totp-rs.workspace = true
tower.workspace = true
tower-http.workspace = true
tracing.workspace = true
utoipa.workspace = true
utoipa-swagger-ui.workspace = true
uuid.workspace = true
url.workspace = true

[lints]
workspace = true

[dev-dependencies]
http-body-util = "0.1.3"
jsonwebtoken.workspace = true
sqlx.workspace = true
