[package]
name = "kitsune-automation"
description = "Kitsune events, safe automations, and webhook delivery"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
kitsune-core = { path = "../kitsune-core" }

[lints]
workspace = true

