[package]
name = "kitsune-cli"
description = "The kit operator CLI"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[[bin]]
name = "kit"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
clap.workspace = true
kitsune-api = { path = "../kitsune-api" }
kitsune-core = { path = "../kitsune-core" }
serde_json.workspace = true

[lints]
workspace = true
