[package]
name = "kitsune-db"
description = "Kitsune PostgreSQL persistence"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
async-trait.workspace = true
chrono.workspace = true
kitsune-core = { path = "../kitsune-core" }
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
sqlx.workspace = true
subtle.workspace = true
uuid.workspace = true

[lints]
workspace = true
