[package]
name = "kitsune-orchestrator"
description = "Kubernetes, Docker, Podman, and Nomad instance orchestration"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
kitsune-core = { path = "../kitsune-core" }

[lints]
workspace = true

