[package]
name = "kitsune-server"
description = "Kitsune dependency composition and server binary"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
axum.workspace = true
axum-extra.workspace = true
base64.workspace = true
config.workspace = true
kitsune-api = { path = "../kitsune-api" }
kitsune-automation = { path = "../kitsune-automation" }
kitsune-core = { path = "../kitsune-core" }
kitsune-db = { path = "../kitsune-db" }
kitsune-integrations = { path = "../kitsune-integrations" }
kitsune-orchestrator = { path = "../kitsune-orchestrator" }
kitsune-plugins = { path = "../kitsune-plugins" }
rand.workspace = true
secrecy.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true
url.workspace = true

[lints]
workspace = true
